<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_reader"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_login_screen"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@id/textview1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/sign_in_btn"
        android:backgroundTint="@color/btn_background_color"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txt_view_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_text_view"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="197dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>