<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/et_email"
        android:background="@drawable/login_et_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:inputType="textPassword"
        android:hint="@string/et_pwd"
        android:background="@drawable/login_et_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>